// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spacer/Spacer  1`] = `
.emotion-0 {
  width: 16px;
  height: 16px;
}

<div
  className="emotion-0"
/>
`;

exports[`spacer/Spacer  2`] = `
.emotion-0 {
  width: 16px;
  height: 16px;
}

<div
  className="emotion-0"
/>
`;

exports[`spacer/Spacer  3`] = `
.emotion-0 {
  width: 40px;
  height: 40px;
}

<div
  className="emotion-0"
/>
`;

exports[`spacer/Spacer  4`] = `
.emotion-0 {
  width: 40px;
  height: 40px;
}

<div
  className="emotion-0"
/>
`;
